--- a/NPM Project/typograpghy.html
+++ b/NPM Project/typograpghy.html
@@ -3,11 +3,12 @@
    
 <head>
     <Link rel="stylesheet" href="main.css" />
-    <title>Typography</title>
+    <title>Typography and Text Utilities</title>
 </head>    
 
 <body>
     <!--using heading classes-->
+    <h2>Typography</h2>
     <p class="h1">h1. Boostrap heading</p>
 
     <p class="h2">h2. Boostrap heading</p>
@@ -37,12 +38,46 @@
     <p class="text-uppercase">Uppercased text</p>
 
     <p class="fs-1">.fs-1 text</p>
-   <p class="fs-2">.fs-2 text</p>
-   <p class="fs-3">.fs-3 text</p>
-   <p class="fs-4">.fs-4 text</p>
-   <p class="fs-5">.fs-5 text</p>
-   <p class="fs-6">.fs-6 text</p>
-   
+    <p class="fs-2">.fs-2 text</p>
+    <p class="fs-3">.fs-3 text</p>
+    <p class="fs-4">.fs-4 text</p>
+    <p class="fs-5">.fs-5 text</p>
+    <p class="fs-6">.fs-6 text</p>
+
+    <!--Text Alignment-->
+    <h2>Text Utilities</h2>
+    <p class="text-start">Start aligned text on all viewport sizes.</p>
+    <p class="text-center">Center aligned text on all viewport sizes.</p>
+    <p class="text-end">End aligned text on all viewport sizes.</p>
+    <p class="text-md-end">End aligned text on viewports sized MD (medium) or wider.</p>
+
+    <!--Text Wrapping-->
+    <h3>Text Overflow</h3>
+    <div class="container bg-primary text-nowrap" style="width: 6vw;">
+        This text should overflow.
+    </div>
+
+    <!-- Text Transform -->
+    <h3>Text Transform</h3>
+    <p class="text-lowercase">Lowercased text.</p>
+    <p class="text-uppercase">Uppercased text.</p>
+    <p class="text-capitalize">CapiTaliZed text.</p>
+
+    <!-- Font Weight -->
+    <h3>Font Weight</h3>
+    <p class="fw-bold">Bold text.</p>
+    <p class="fw-medium">Medium weight text.</p>
+
+    <!-- Font Style -->
+    <h3>Font Style</h3>
+    <p class="fst-italic">Italic text.</p>
+
+    <!-- Line Height -->
+    <h3>Line Height</h3>
+    <p class="lh-1">Line height 1 - compact spacing.</p>
+    <p class="lh-sm">Line height small.</p>
+    <p class="lh-base">Line height base.</p>
+    <p class="lh-lg">Line height large.</p>
 </body>  
 
 </html>
