--- a/NPM Project/navBar.html
+++ b/NPM Project/navBar.html
@@ -83,6 +83,7 @@
     <div class="container-fluid mt-4">
         <div class="card" style="width: 25vw;">
             <img src="./images/paro-dzong.jpg" class="card-img-top" alt="Sample Image">
+            <img src="./images/paro-dzong.jpg" class="image-fluid" alt="Responsive image">
 
             <div class="card-body">
                 <h5 class="card-title">INTRODUCTION</h5>
